--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unity (7.4.0+16.04.20160322-0ubuntu1) xenial; urgency=medium
+
+  * ForceQuitDialog: set client leader
+
+ -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 22 Mar 2016 15:36:52 +0000
+
 unity (7.4.0+16.04.20160321-0ubuntu1) xenial; urgency=medium
 
   [ Andrea Azzarone ]
